--- a/peaces.html
+++ b/peaces.html
@@ -102,7 +102,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="">
-                <a href="./index.html">登百岳</a>
+                <a href="./index.html">首頁</a>
               </li>
               <li class="active">
                 <a href="./peaces.html">R.I.P</a>
